@@ -72,6 +72,8 @@ BUG FIXES
     o	format(*, nsmall = m) with m > 0 now returns exponential format
 	less often.
 
+    o	file.copy() ignored the overwrite argument (PR#3529)
+
 
 
 		CHANGES IN R VERSION 1.7.1
